chore(docs): add endpoint tags
